# AI_Econ_daioe_years

./: .gitignore  README.md  app.py  app_version1.py  app_version2.py  daioe_age_ssyk.ipynb  daioe_ssyk12.ipynb  daioe_ssyk12.qmd  notebook_test.ipynb  pyproject.toml  setup.py  ssyk12_pipeline.ipynb  visuals.ipynb
.github/actions/: action.yml
.github/workflows/: 01_scb_pull_to_daioe_pull.yml  02_daioe_pull_to_development.yml  daioe_pull_to_development.yml  scb_pull_to_daioe_pull  scb_pull_to_daioe_pull.yml
data/: daioe_scb_all_levels.parquet  processed_data.parquet
data/processed/: ssyk12_aggregated_ssyk4_to_ssyk1.parquet
logs/: ssyk12_14_to_18_update_log.txt  ssyk12_19_to_21_update_log.txt  ssyk12_20_to_24_update_log.txt  ssyk96_05_to_13_update_log.txt
notebooks/: data_edits.ipynb  visuals.ipynb
scripts/: aggregate.py  main.py  merge.py  pipeline.py  pull.py
src/: data_edits.py  fcts.py
