[project]
name = "ai-econ-daioe-years"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "faicons>=0.2.2",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.1",
]
