[project]
name = "ai-econ-daioe-years"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chart-studio>=1.1.0",
    "faicons>=0.2.2",
    "great-tables>=0.20.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "plotly[express]>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "shiny[express,theme]>=1.5.1",
    "shinywidgets>=0.7.1",
]
